testsuite/escript/errors/errors005-const-same-name-as-function.src
const print := 5;
print( print );
