testsuite/escript/errors/errors005-const-same-name-as-function.err
errors005-const-same-name-as-function.src:1:1: error: Cannot define a constant with the same name as function 'print'.
